--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       }
 
       try {
-        const response = await fetch("http://127.0.0.1:5000/merge", {
+        const response = await fetch("https://smart-merge-backend.onrender.com/merge", {
           method: "POST",
           body: formData
         });
@@ -136,3 +136,4 @@
   </script>
 </body>
 </html>
+
