Replace Render with Railway

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       }
 
       try {
-        const response = await fetch("https://smart-merge-backend.onrender.com/merge", {
+        const response = await fetch("https://web-production-1372f.up.railway.app/merge", {
           method: "POST",
           body: formData
         });
@@ -136,4 +136,5 @@
   </script>
 </body>
 </html>
+
 
