--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Smart Merge by Aranix</title>
+  <title>Smart Merge by Aranix Ltd.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     :root {
@@ -215,3 +215,4 @@
   </script>
 </body>
 </html>
+
