Linkedin Welcome Page to Smart Merge Tool

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <main>
     <h1>Welcome to Excel Helper</h1>
     <h2>by Aranix</h2>
-    <button class="tool-btn" onclick="location.href='index.html'">Smart Merge</button>
+    <button class="tool-btn" onclick="location.href='smart-merge.html'">Smart Merge</button>
     <button class="coming-btn" disabled>Other tools coming soon...</button>
     <button class="coming-btn" disabled>Other tools coming soon...</button>
   </main>
