--- a/smart-merge.html
+++ b/smart-merge.html
@@ -195,6 +195,22 @@
       .upload-area{padding:22px}
       .banner{padding:16px}
     }
+    
+    .spinner {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      border: 3px solid rgba(255,255,255,0.2);
+      border-top: 3px solid var(--primary);
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      vertical-align: middle;
+      margin-right: 8px;
+    }
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+
   </style>
 </head>
 <body>
@@ -317,7 +333,8 @@
   // Upload & merge
   mergeBtn.addEventListener('click', async ()=>{
     if (!currentFiles.length) return;
-    setStatus('Uploading and merging...');
+    status.innerHTML = '<span class="spinner"></span> Uploading and merging...';
+    status.className = '';
     mergeBtn.disabled = true;
 
     const form = new FormData();
