--- a/smart-merge.html
+++ b/smart-merge.html
@@ -380,6 +380,9 @@
     }
   });
 </script>
+    <!-- Footer -->
+  <div class="footer">Made with <span>❤️</span> by Aranix</div>
 </body>
 </html>
+
 
