--- a/smart-merge.html
+++ b/smart-merge.html
@@ -380,9 +380,12 @@
     }
   });
 </script>
+
+  </div>
     <!-- Footer -->
   <div class="footer">Made with <span>❤️</span> by Aranix</div>
 </body>
 </html>
+
 
 
