--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
       </button>
       <button class="card-btn" disabled>
         <h3>Smart Format Changer</h3>
-        <p>Change format of your files as per your desired structure</p>
+        <p>Change format of your files to per your desired base structure</p>
       </button>
-      <button class="card-btn" disabled>
+      <button class="card-btn" onclick="location.href='smart-format-changer.html'">
         <h3>New Tools Coming Soon</h3>
         <p>Stay tuned for more features</p>
       </button>
