--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Excel Helper — Aranix</title>
+  <title>Aranix Helper - Discover Tools and save your valuable time!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     :root {
