Update index.html Added logo

--- a/index.html
+++ b/index.html
@@ -121,8 +121,13 @@
   </style>
 </head>
 <body>
+
+  <!-- Brand Logo Only -->
+  <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 1rem;">
+    <img src="/AranixHelper_logo.png" alt="Aranix Helper Logo" style="height: 70px; width: auto;">
+  </div>
+
   
-  <!-- Brand Title -->
   <h1 style="
     font-size: 2.2rem;
     font-weight: 700;
