--- a/smart-merge.html
+++ b/smart-merge.html
@@ -231,9 +231,9 @@
 <body>
   <div class="container">
 
-    <!-- Brand (aligns with index) -->
-    <div class="brand">
-      <h1>Aranix Helper</h1>
+    <!-- Brand Logo Only -->
+    <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 1rem;">
+      <img src="/AranixHelper_logo.png" alt="Aranix Helper Logo" style="height: 60px; width: auto;">
     </div>
 
     <!-- Banner header -->
@@ -401,5 +401,6 @@
   <div class="footer">Made with <span>❤️</span> by Aranix</div>
 </body>
 </html>
+
 
 
