--- a/smart-format-changer.html
+++ b/smart-format-changer.html
@@ -107,8 +107,10 @@
 <body>
   <div class="container">
 
-    <!-- Brand -->
-    <div class="brand"><h1>Aranix Helper</h1></div>
+    <!-- Brand Logo Only -->
+    <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 1rem;">
+      <img src="/AranixHelper_logo.png" alt="Aranix Helper Logo" style="height: 60px; width: auto;">
+    </div>
 
     <!-- Banner -->
     <div class="banner">
