--- a/smart-format-changer.html
+++ b/smart-format-changer.html
@@ -38,9 +38,14 @@
       -webkit-background-clip:text;-webkit-text-fill-color:transparent;
       text-shadow:0 6px 24px rgba(47,125,246,0.06);
     }
-    .banner{background:linear-gradient(135deg,rgba(47,125,246,0.06),rgba(124,92,255,0.03));
-      border-radius:var(--radius);padding:22px;margin-bottom:22px;
-      border:1px solid rgba(255,255,255,0.03);box-shadow:0 8px 30px rgba(2,6,23,0.6)}
+    .banner {
+      background: linear-gradient(135deg, rgba(47,125,246,0.12), rgba(124,92,255,0.08));
+      border-radius: var(--radius);
+      padding: 22px;
+      margin-bottom: 22px;
+      border: 1px solid rgba(47,125,246,0.2);
+      box-shadow: 0 6px 24px rgba(47,125,246,0.12);
+    }
     .banner h2{margin:0 0 8px 0;font-size:20px;font-weight:700;color:var(--text)}
     .banner p{margin:0;color:var(--muted);font-size:14px}
     .upload-card{background:linear-gradient(180deg,rgba(255,255,255,0.01),rgba(255,255,255,0.015));
