--- a/smart-merge.html
+++ b/smart-merge.html
@@ -238,7 +238,7 @@
 
     <!-- Banner header -->
     <div class="banner" role="region" aria-labelledby="merge-title">
-      <h2 id="merge-title">Merge Files</h2>
+      <h2 id="merge-title">Smart Merge</h2>
       <p>Combine multiple Excel files with intelligent matching</p>
     </div>
 
@@ -401,6 +401,7 @@
   <div class="footer">Made with <span>❤️</span> by Aranix</div>
 </body>
 </html>
+
 
 
 
