--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
     <!-- Welcome Box -->
     <div class="welcome-box">
-      <h2>Welcome back <span style="font-size:1.4rem;">👋</span></h2>
-      <p>Ready to process your Excel files? Choose a tool below to get started.</p>
+      <h2>Welcome <span style="font-size:1.4rem;">👋</span></h2>
+      <p>Discover simple & useful tools - built to make everyday tasks easier.</p>
     </div>
 
     <!-- Quick Start -->
