--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!-- Welcome Box -->
     <div class="welcome-box">
       <h2>Welcome <span style="font-size:1.4rem;">👋</span></h2>
-      <p>Discover simple & useful tools - built to make everyday tasks easier.</p>
+      <p>Discover simple & useful tools - built to make everyday tasks easier. No coding. No Excel headaches.</p>
     </div>
 
     <!-- Quick Start -->
@@ -145,7 +145,7 @@
       </button>
       <button class="card-btn" onclick="location.href='smart-format-changer.html'">
         <h3>Smart Format Changer</h3>
-        <p>Change format of your files to per your desired base structure</p>
+        <p>Change format of your files to your desired base structure</p>
       </button>
       <button class="card-btn" disabled>
         <h3>New Tools Coming Soon</h3>
