--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     if (chat.classList.contains("show")) {
       chat.classList.remove("show");
       setTimeout(() => (chat.style.display = "none"), 300); // wait for animation
-      chatIcon.src = "ab45813c-32fc-43b5-ade1-b9401d0d8009.png"; // bot icon
+      chatIcon.src = "chat-bot.png"; // bot icon
     } else {
       chat.style.display = "flex";
       setTimeout(() => chat.classList.add("show"), 10); // trigger animation
